Soporte para kick, mute y ban de usuarios.

--- a/README
+++ b/README
@@ -4,7 +4,7 @@ es funcional y cumple su cometido.
 
 Caracteristicas
 - Sistema de salas
-- Posibilidad de Mutear y Banear usuarios de las salas - Pendiente
+- Posibilidad de Mutear y Banear usuarios de las salas
 - Sistema de privilegios
 - Consola de comandos - Pendiente
 - Conversaciones privadas entre usuarios
