--- a/README
+++ b/README
@@ -7,4 +7,4 @@ Caracteristicas
 - Posibilidad de Mutear y Banear usuarios de las salas
 - Sistema de privilegios
 - Consola de comandos - Pendiente
-- Conversaciones privadas entre usuarios
+- Conversaciones privadas entre usuarios,
