--- a/README
+++ b/README
@@ -1,10 +1,14 @@
-Que es esto?
-Esta aplicacion es un chat diseñado en java, es un programa de "prueba" pero
-es funcional y cumple su cometido.
+# Jassap
 
-Caracteristicas
-- Sistema de salas
-- Posibilidad de Mutear y Banear usuarios de las salas
-- Sistema de privilegios
-- Consola de comandos - Pendiente
-- Conversaciones privadas entre usuarios
+Jassap is a simple chat application made while i`m learning java. This app has
+no other purpose than learn.
+
+## Features
+* Rooms
+* Mute/Ban
+* Mod privileges
+* Private chats
+
+### Command line options
+```
+  -a, --all
